syntax = "proto3";
package matcha.view;
import "gomatcha.io/matcha/proto/text/text.proto";
import "gomatcha.io/matcha/proto/keyboard/keyboard.proto";

option go_package = "view";
option objc_class_prefix = "MatchaViewPB";
option java_package = "io.gomatcha.matcha.proto.view";
option java_outer_classname = "PbTextInput";

message TextInput {
    matcha.text.StyledText styledText = 1;
    matcha.text.StyledText placeholderText = 2;
    matcha.text.Font font = 10;
    bool focused = 4;
    matcha.keyboard.Type keyboardType = 5;
    matcha.keyboard.Appearance keyboardAppearance = 6;
    matcha.keyboard.ReturnType keyboardReturnType = 7;
    int64 maxLines = 8;
    bool secureTextEntry = 9;
}

message TextInputEvent {
    matcha.text.StyledText styledText = 1;
}

message TextInputFocusEvent {
    bool focused = 1;
}

message TextInputSubmitEvent {
}